--- a/starter/package.json
+++ b/starter/package.json
@@ -11,5 +11,10 @@
     "start": "vite",
     "start-local": "vite --config ./vite.config.local.js",
     "build": "vite build"
+  },
+  "devDependencies": {
+    "@types/node": "^25.2.3",
+    "@types/react": "^19.2.14",
+    "@types/react-dom": "^19.2.3"
   }
 }
